@@ -1,3 +1,6 @@
 ## $Id$
 
 SUBDIRS = data m4 src
+EXTRA_DIST = AUTHORS COPYING README INSTALL NEWS ChangeLog \
+	     embrace.spec
+
